# vulkansink

./: .gitignore
android/main/: AndroidManifest.xml
android/main/res/values/: strings.xml
project.gradle/: build.gradle
project.gradle/app/: .gitignore  build.gradle  proguard-rules.pro
source/: CMakeLists.txt
source/app/: CMakeLists.txt  application.cpp  application.h  java_application.cpp  java_application.h  main.cpp
source/app/graphics/: egl.cpp  egl.h  gldebug.cpp  gldebug.h  graphics.cpp  graphics.h  gui.cpp  gui.h  shader.cpp  shader.h  texture.cpp  texture.h  vulkan-test.cpp  vulkan-test.h  vulkandebug.cpp  vulkandebug.h  wsi.cpp  wsi.h
source/app/utils/: fs_android.cpp  fs_android.h  log.cpp  log.h  opengl.h  timing.cpp  timing.h  vfs.cpp  vfs.h
source/imgui/: CMakeLists.txt
source/java/com/example/micha/vulkansink/: VulkanActivity.java
source/native_app_glue/: CMakeLists.txt
source/profiler/: CMakeLists.txt  profiler.cpp  profiler.h
source/profiler/communications/: packets.cpp  packets.h  socketclient.cpp  socketclient.h
source/shaders/: tutorial4.vert
